--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,58 @@
-<html>
-  <head>
-    <title>Minesweeper</title>
-    
-  </head>
-  <body>
-    <h1>Hello world</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Minesweeper Game</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="./style.css" />
+	</head>
+	<body>
+		<div class="container">
+			<h1>Minesweeper Game</h1>
+
+			<div class="row">
+				<div class="col">
+					<label for="difficultySection">Select difficulty</label>
+					<select id="difficultySelection" onchange="changeDifficulty()">
+						<option>Easy</option>
+						<option>Medium</option>
+						<option>Hard</option>
+					</select>
+				</div>
+			</div>
+
+			<div class="row">
+				<p>Select probabilities as in: <b>2/5</b> (=40%)</p>
+				<div class="col">
+					<label>Bomb probability</label>
+					<input
+						placeholder="Range 1 to max probability"
+						value="3"
+						id="bombProbabilityInput"
+					/>
+				</div>
+				<div class="col">
+					<label>Max probability</label>
+					<input placeholder="Min: 1" value="15" id="maxProbabilityInput" />
+				</div>
+			</div>
+			<button onclick="startGame()">Restart</button>
+
+			<div class="d-flex justify-content-center align-items-center">
+				<div class="" id="gameContainer"></div>
+			</div>
+		</div>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+			crossorigin="anonymous"
+		></script>
+		<script src="./solution-template.js"></script>
+	</body>
 </html>
